<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/tan_background"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/standard_padding"
        android:text="@string/title"
        android:textSize="@dimen/textSizeBig" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/small_padding"
        android:text="@string/subtitle"
        android:textSize="@dimen/textSizeNormal"
        android:textStyle="italic" />
    <TextView
        android:id="@+id/vol1"
        style="@style/CategoryStyle"
        android:background="@color/category_vol1"
        android:text="@string/category_vol1" />

    <TextView
        android:id="@+id/vol2"
        style="@style/CategoryStyle"
        android:background="@color/category_vol2"
        android:text="@string/category_vol2" />

    <TextView
        android:id="@+id/vol3"
        style="@style/CategoryStyle"
        android:background="@color/category_vol3"
        android:text="@string/category_vol3" />

    <TextView
        android:id="@+id/vol4"
        style="@style/CategoryStyle"
        android:background="@color/category_vol4"
        android:text="@string/category_vol4" />

</LinearLayout>